--- a/comparison.html
+++ b/comparison.html
@@ -91,6 +91,10 @@
                 }
             });
         }
+        function toggleMenu() {
+        document.querySelector(".sidebar").classList.toggle("open");
+        document.querySelector(".overlay").classList.toggle("active");
+    }
     </script>
 </body>
 </html>
