--- a/expenses.html
+++ b/expenses.html
@@ -168,6 +168,10 @@ function loadExpenses() {
             };
             reader.readAsText(file);
         }
+        function toggleMenu() {
+        document.querySelector(".sidebar").classList.toggle("open");
+        document.querySelector(".overlay").classList.toggle("active");
+    }
     </script>
 </body>
 </html>
